# rust_file_manager

./: Cargo.toml
benches/: my_benchmark.rs~
src/: file_manager.rs  formatter.rs  formatter.rs~  main.rs
src/file_manager/: mod.rs~
src/for_debug/: mod.rs~
src/test/: test.txt  text2.txt
